--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -1,16 +1,34 @@
-.brandName{
-    height: 40px;
-    width: 70px;
-    cursor: pointer;
+.brandName {
+  height: 40px;
+  width: 70px;
+  cursor: pointer;
+}
+@media screen and (max-width: 410px) {
+  .brandName {
+    height: 25px;
+    width: 35px;
+  }
 }
 
-.navbarLink{
-    color: #ffff;
+.navbarLink {
+  color: #ffff;
 }
-.lououtBtn{
-    color: #ffff;
-    cursor: pointer;
+@media screen and (max-width: 410px) {
+  .navbarLink {
+    font-size: 8px;
+  }
 }
-.lououtBtn:hover{
-    color: #c6c2c2;
+
+.lououtBtn {
+  color: #ffff;
+  cursor: pointer;
+  font-size: 30px;
+}
+.lououtBtn:hover {
+  color: #c6c2c2;
+}
+@media screen and (max-width: 410px) {
+  .lououtBtn {
+    font-size: 15px;
+  }
 }
