--- a/src/Style/RentalIssue.css
+++ b/src/Style/RentalIssue.css
@@ -5,11 +5,8 @@
   border-radius: 3px;
 }
 
-.TableHeading{
- background-color: #008080;
- color: #ffff;
- margin-top: 3%;
- margin-bottom: 1.5%;
- padding: 5px;
-
+.bookingHeading{
+  background-color: #008080;
+    color: #ffff;
+    padding: 5px;
 }
