--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,15 @@
   background-color: #ba1818;
 }
 
+.DeleteRow{
+  color: #d30e0e;
+  font-size: 20px;
+  margin-top: 3px;
+  margin-right: 4px;
+  opacity: 0;
+  cursor: pointer;
+}
+
+tr:hover .DeleteRow {
+  opacity: 1;
+}
