--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ cursor: not-allowed;
 }
 
 .phoneVeryfiedStyle{
-  background-color: #0e990e;
+  background-color: #057805bf;
   padding: 8px;
   text-align: center;
   color: #ffff;
