--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -42,7 +42,17 @@
   padding: 10px;
   color: #ffff;
   cursor: pointer;
+  border: none;
 }
+
+.DisableSearch {
+  background-color: #06990680;
+  padding: 10px;
+  color: #ffff;
+  border: none;
+  cursor: not-allowed;
+}
+
 .searchButton:hover {
   background-color: #0bb50b;
 }
