--- a/src/Style/AdminSidebar.css
+++ b/src/Style/AdminSidebar.css
@@ -1,3 +1,4 @@
+
 .AdminSidebarStyle {
     height: 100vh;
     position: fixed;
@@ -5,21 +6,33 @@
     width: 250px;
 }
 
-.NavigationStyle {
-    text-decoration: none;
-    color: #ffff;
+@media screen and (max-width:685px) {
+    .AdminSidebarStyle {
+        display: none;
+    }
 }
 
-.NavigationStyle:hover {
-    text-decoration: underline;
+.DropdownForAdmin {
+    background: transparent;
+    background-color: #f0f3f6;
+    padding: 10px;
+    display: flex;
 }
- .main {
-     overflow-x: hidden;
-     margin-left: 250px;
-     margin-top: 10px;
-     padding: 0px 10px;
-     display: flex;
-     flex-direction: column;
-     flex-wrap: nowrap;
-     z-index: -1;
+
+@media screen and (min-width:685px) {
+    .DropdownForAdmin {
+        display: none;
+    }
+}
+ @media screen and (min-width:685px) {
+     .main {
+         overflow-x: hidden;
+         margin-left: 250px;
+         margin-top: 10px;
+         padding: 0px 10px;
+         display: flex;
+         flex-direction: column;
+         flex-wrap: nowrap;
+         z-index: -1;
+     }
  }
