--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   padding-right: 20px;
   font-size: large;
   border: none;
-  background-color: #479999;
+  background-color: #049191bd;
   color: #ffff;
   border-radius: 3px;
   font-size: 14px;
