--- a/src/Style/Login.css
+++ b/src/Style/Login.css
@@ -15,7 +15,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  /* background-image: url("../Asset/Img/LoginBg.jpg"); */
+  background-image: url("../Asset/Img/tanishqLogo.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -26,7 +26,6 @@
   width: 30%;
   background-color: #ffff;
   border-radius: 1px;
-  border: 1.5px solid #008080;
   border-radius: 3px;
 }
 
