--- a/src/Style/AdminSidebar.css
+++ b/src/Style/AdminSidebar.css
@@ -4,6 +4,9 @@
     position: fixed;
     background: #008080;
     width: 250px;
+    margin-top: -6%;
+    padding-top: 5%;
+    z-index: 1;
 }
 
 @media screen and (max-width:685px) {
