--- a/src/Style/AdminSidebar.css
+++ b/src/Style/AdminSidebar.css
@@ -1,41 +1,40 @@
-
 .AdminSidebarStyle {
-    height: 100vh;
-    position: fixed;
-    background: #008080;
-    width: 250px;
-    margin-top: -6%;
-    padding-top: 5%;
-    z-index: 1;
+  height: 100vh;
+  position: fixed;
+  background: #008080;
+  width: 250px;
+  /* margin-top: -5%;
+  padding-top: 5%; */
+  /* z-index: 1; */
 }
 
-@media screen and (max-width:685px) {
-    .AdminSidebarStyle {
-        display: none;
-    }
+@media screen and (max-width: 685px) {
+  .AdminSidebarStyle {
+    display: none;
+  }
 }
 
 .DropdownForAdmin {
-    background: transparent;
-    background-color: #f0f3f6;
-    padding: 10px;
-    display: flex;
+  background: transparent;
+  background-color: #f0f3f6;
+  padding: 10px;
+  display: flex;
 }
 
-@media screen and (min-width:685px) {
-    .DropdownForAdmin {
-        display: none;
-    }
+@media screen and (min-width: 685px) {
+  .DropdownForAdmin {
+    display: none;
+  }
 }
- @media screen and (min-width:685px) {
-     .main {
-         overflow-x: hidden;
-         margin-left: 250px;
-         margin-top: 10px;
-         padding: 0px 10px;
-         display: flex;
-         flex-direction: column;
-         flex-wrap: nowrap;
-         z-index: -1;
-     }
- }
+@media screen and (min-width: 685px) {
+  .main {
+    overflow-x: hidden;
+    margin-left: 250px;
+    margin-top: 10px;
+    padding: 0px 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    z-index: -1;
+  }
+}
