--- a/src/Style/AdminSidebar.css
+++ b/src/Style/AdminSidebar.css
@@ -1,11 +1,17 @@
+.side_brandName {
+  height: 40px;
+  width: 70px;
+  margin-top: -17%;
+  margin-left: 30px;
+}
+
 .AdminSidebarStyle {
   height: 100vh;
   position: fixed;
   background: #008080;
   width: 250px;
-  /* margin-top: -5%;
-  padding-top: 5%; */
-  /* z-index: 1; */
+  padding-top: 3%;
+  top: 0%;
 }
 
 @media screen and (max-width: 685px) {
