--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -1,5 +1,3 @@
-
-
 .brandName {
   height: 40px;
   width: 70px;
@@ -35,19 +33,10 @@
   }
 }
 
-
-.notification {
-  color: white;
-  text-decoration: none;
+.badge {
   position: relative;
-  display: inline-block;
-  border-radius: 2px;
-}
-
-.notification .badge {
-  position: absolute;
-  top: -5px;
-  right: -3px;
+  top: -9px;
+  right: 10px;
   border-radius: 50%;
   background: #0000ff;
 }
