--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -3,6 +3,7 @@
   width: 70px;
   cursor: pointer;
 }
+
 @media screen and (max-width: 410px) {
   .brandName {
     height: 25px;
@@ -13,6 +14,7 @@
 .navbarLink {
   color: #ffff;
 }
+
 @media screen and (max-width: 410px) {
   .navbarLink {
     font-size: 8px;
@@ -24,9 +26,11 @@
   cursor: pointer;
   font-size: 32px;
 }
+
 .lououtBtn:hover {
   color: #c6c2c2;
 }
+
 @media screen and (max-width: 410px) {
   .lououtBtn {
     font-size: 15px;
@@ -35,8 +39,9 @@
 
 .badge {
   position: relative;
-  top: -5px;
-  right: 10px;
+  top: -2px;
+  right: 11px;
   border-radius: 50%;
   background: #0000ff;
+  font-size: 11px;
 }
