--- a/src/Style/Navbar.css
+++ b/src/Style/Navbar.css
@@ -45,3 +45,16 @@
   background: #0000ff;
   font-size: 11px;
 }
+
+
+.timeShowStyle {
+  text-align: center;
+  font-size: 13px;
+  margin-right: 15px;
+}
+
+@media screen and (max-width:767px) {
+  .timeShowStyle {
+    display: none;
+  }
+}
